# gemini-chat-test

./: .gitignore  README.md  README_pt-BR.md  main.py  pyproject.toml  server.py  verify_key.py
src/static/: index.html  script.js  style.css
